--- a/app/globals.css
+++ b/app/globals.css
@@ -4,8 +4,9 @@
 
 :root {
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --background-start-rgb: 0, 0, 0;
+  --background-mid-rgb: 166, 166, 166;
+  --background-end-rgb: 123, 217, 87;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -17,11 +18,16 @@
 }
 
 body {
+  height: 100vh;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+    to bottom,
+    rgb(var(--background-start-rgb)) 1%,
+    rgb(var(--background-mid-rgb)) 11%,
+    rgb(var(--background-end-rgb)) 17%,
+    rgb(var(--background-mid-rgb)) 28%,
+    rgb(var(--background-mid-rgb)) 70%,
+    rgb(var(--background-start-rgb)) 99%
+    );
+    background-repeat: no-repeat;
 }
