--- a/app/globals.css
+++ b/app/globals.css
@@ -9,13 +9,13 @@
   --background-end-rgb: 123, 217, 87;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
   }
-}
+} */
 
 body {
   height: 100vh;
@@ -30,4 +30,34 @@ body {
     rgb(var(--background-start-rgb)) 99%
     );
     background-repeat: no-repeat;
+}
+
+.embla {
+  --slide-spacing: 1rem;
+  --slide-size: 50%;
+  --slide-height: 30rem;
+  padding: 1.6rem;
+}
+.embla__viewport {
+  overflow: hidden;
+}
+.embla__container {
+  backface-visibility: hidden;
+  /* display: flex; */
+  touch-action: pan-y;
+  flex-direction: row;
+  height: auto;
+  margin-left: calc(var(--slide-spacing) * -1);
+}
+.embla__slide {
+  flex: 0 0 var(--slide-size);
+  min-width: 28vw;
+  padding-left: var(--slide-spacing);
+  position: relative;
+}
+.embla__slide__img {
+  display: block;
+  height: var(--slide-height);
+  width: auto;
+  object-fit: cover;
 }
