--- a/app/globals.css
+++ b/app/globals.css
@@ -28,14 +28,14 @@ body {
     rgb(var(--background-mid-rgb)) 28%,
     rgb(var(--background-mid-rgb)) 70%,
     rgb(var(--background-start-rgb)) 99%
-    );
-    background-repeat: no-repeat;
+  );
+  background-repeat: no-repeat;
 }
 
 .embla {
   --slide-spacing: 1rem;
-  --slide-size: 50%;
-  --slide-height: 30rem;
+  --slide-size: 70%;
+  --slide-height: 30vh;
   padding: 1.6rem;
 }
 .embla__viewport {
@@ -51,9 +51,11 @@ body {
 }
 .embla__slide {
   flex: 0 0 var(--slide-size);
-  min-width: 28vw;
+  min-width: 26vw;
   padding-left: var(--slide-spacing);
   position: relative;
+  padding-top: 3rem;
+  padding-bottom: 14rem;
 }
 .embla__slide__img {
   display: block;
