--- a/app/globals.css
+++ b/app/globals.css
@@ -63,3 +63,9 @@ body {
   width: auto;
   object-fit: cover;
 }
+
+.pageButtons {
+  @apply flex items-center text-white bg-slate-800 rounded-[2rem] shadow-2xl duration-300 ease-in-out transition-all 
+  hover:bg-slate-900 hover:text-white hover:-translate-y-1 hover:scale-105 hover:shadow-4xl
+  active:translate-y-px active:shadow-lg
+}
