--- a/app/globals.css
+++ b/app/globals.css
@@ -65,7 +65,20 @@ body {
 }
 
 .pageButtons {
-  @apply flex items-center text-white bg-slate-800 rounded-[2rem] shadow-2xl duration-300 ease-in-out transition-all 
-  hover:bg-slate-900 hover:text-white hover:-translate-y-1 hover:scale-105 hover:shadow-4xl
+  @apply flex items-center shadow-2xl duration-300 ease-in-out transition-all rounded-md
+  hover:-translate-y-1 hover:scale-105 hover:shadow-4xl
   active:translate-y-px active:shadow-lg
+}
+
+.contactInput {
+  @apply outline-none cursor-pointer bg-slate-100/80 rounded-md shadow-4xl px-6 py-3 border-b-4 border-gray-900/40 text-gray-950 placeholder-gray-500 transition-all focus:border-gray-900/70 focus:text-gray-950 hover:border-gray-900
+}
+
+.contactText {
+  @apply font-semibold text-center text-xl
+  xs:text-2xl
+  md:text-3xl
+  lg:text-4xl lg:space-y-6
+  xl:text-4xl 
+  2xl:text-4xl
 }
